# BSDiffDemo

./: README.md
app/: build.gradle
app/src/androidTest/java/com/jni/bsdiffdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bspatch.c  native-lib.cpp
app/src/main/java/com/jni/bsdiffdemo/: InstallUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/jni/bsdiffdemo/: ExampleUnitTest.java
bsdiff/bzip2-1.0.5-src/manifest/: bzip2-1.0.5-src.mft  bzip2-1.0.5-src.ver
gradle/wrapper/: gradle-wrapper.properties
